apps/base/homepage/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-http-route
  namespace: homepage
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "home.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-tls-route
  namespace: homepage
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "home.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
